# CARTA

./: README.md  environment.yaml  pyproject.toml
carta/: carta.py  carta_main.py  fastCarta.py
data/TLS/: Snakefile  TLSCL_input_files.tsv  TLSCL_states.txt  TLS_DAG_no_normalization_6_annotated_cell_fate_map.cyjs  TLS_DAG_no_normalization_7_annotated_cell_fate_map.pkl  TLS_input_files.tsv  TLS_locations.txt  config.yaml  multiseq_barcodes.txt
data/TLS/.ipynb_checkpoints/: Snakefile-checkpoint  TLS_input_files-checkpoint.tsv  config-checkpoint.yaml
data/TLS/formatted_and_reduced_labels/: AM-DNA-097_metadata.txt  AM-DNA-098_metadata.txt  Bar10_metadata.txt  Bar12_metadata.txt  Bar13_metadata.txt  (+10 more)
data/gastruloid/: Snakefile  TLS_locations.txt  config.yaml
data/graph_simulation/: Snakefile  config.yaml  sim_states_6.txt
data/larry/: Snakefile  config.yaml
data/simulations/: Snakefile  run_evoC_our_sim.smk  run_fastCARTA_many_graph_poly.smk  run_fastCARTA_many_poly.smk
data/tree_simulation/: Snakefile  config.yaml
notebooks/: TLS_figures.ipynb  concat_TLS_meta.txt  figure_utils.py  graph_evaluation.ipynb  misc_figures.ipynb  simulation_figures.ipynb  tree_evaluation.ipynb
scripts/: MLE_time_estimate_trees.py  algs.py  build_DAG_from_labeled_trees.py  evo_coupling.py  fastCARTA.py  graph_generation_utils.py  larry.py  run_evo_coupling_single_tree.py  run_fastCARTA.py  run_fastCARTA_graph.py  run_ice_fase_single_tree.R  simulate_tree_from_qfm_fate_map.py  utils.py
src/: build_DAG_from_labeled_trees.py  evo_coupling.py  graph_generation_utils.py  ilp.py  ilp_extras.py  make_time_estimate_trees.py  perturb_tree.py  run_evo_coupling.py  run_ice_fase.R  run_ilp.py  simulate_tree_from_graph_fate_map.py  utils.py
test/: TLS_states.txt  concat_TLS.nwk  concat_TLS_meta_reduced.txt  progen_mat.csv  test_Carta_nodeLabels_1.txt  test_Carta_nodeLabels_2.txt  test_Carta_nodeLabels_3.txt  test_Carta_progenitors_1.txt  test_Carta_progenitors_2.txt  test_Carta_progenitors_3.txt  test_Carta_results_1.txt  test_Carta_results_2.txt  test_Carta_results_3.txt  test_fastCarta_edge_labeling_1.txt  test_fastCarta_edge_labeling_2.txt  test_fastCarta_edge_labeling_3.txt  test_fastCarta_progenitors_1.txt  test_fastCarta_progenitors_2.txt  test_fastCarta_progenitors_3.txt  test_fastCarta_results_1.txt  test_fastCarta_results_2.txt  test_fastCarta_results_3.txt  test_locations.txt
(+37146 files in other folders)
