[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["carta"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "carta"
version = "1.0"
authors = [
  { name="Palash Sashittal and Richard Zhang", email="sashittal@vt.edu"},
]
description = "Python package for cell differentiation mapping"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.10.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "numpy",
    "pandas==2.2.2",
    "gurobipy==11.0.0",
    #"gurobipy",
    "networkx",
    "ete3",
    "loguru",
    "cassiopeia-lineage @ git+https://github.com/YosefLab/Cassiopeia",
]

[project.urls]
Homepage = "https://github.com/raphael-group/CARTA"
Issues = "https://github.com/raphael-group/CARTA/issues"

[project.scripts]
carta = "carta.carta:main_cli"
